add everyone role permissions checks - new server users should only be able to perform basic actions in verification category and its channels, and nowhere else. Bot sends a message to bot channel if issues are found. Periodically checked

--- a/DanajBot/appsettings.json
+++ b/DanajBot/appsettings.json
@@ -17,9 +17,14 @@
     "AllowedHosts": "*",
     "AppSettings": {
         "DiscordToken": "",
+        "BotChatChannelId": 0,
         "Zkouska": {
-            "SourceChannelId": "",
-            "DestinationChannelId": ""
+            "SourceChannelId": 0,
+            "DestinationChannelId": 0
+        },
+        "EveryonePermissionChecksSettings": {
+            "VerificationCategoryId": 0,
+            "PermissionCheckIntervalMinutes": 60
         }
     }
 }
